# dream-engine

./: .env.example  .gitignore  README.md  pyproject.toml
dream_engine/: cli.py  config.py  dreamer.py  ingestor.py  main.py  models.py  parser.py  setup.py  sitegen.py  spawner.py
site/: connections.html  dreams.html  gaps.html  index.html  projects.html  style.css
site-template/: connections.html  dreams.html  projects.html  style.css
