[project]
name = "dream-engine"
version = "0.1.0"
description = "AI-powered project analysis engine. Scans your codebase, dreams about connections, generates insights."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
dream = "dream_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
